# test-suite

./: .gitignore  BISECTION_PROCESS.md  Cargo.toml  DEVELOPER_GUIDE.md  HARNESS_CHANGES_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  README.md  SNAPSHOT_BUG_ANALYSIS.md  WINDOWS_PERMISSIONS_ANALYSIS.md  bisect_harness.sh  config.yaml  pyproject.toml  results.html
.github/: dependabot.yml
.github/workflows/: bisect.yml  harness.yml  test-multi-platform.yml  test-ubuntu-scheduled.yml  test-ubuntu.yml
ai/: results.html
docs/: architecture.md  troubleshooting.md
docs/api/: README.md  conf.py  index.rst
examples/: revision_release_snapshot_example.rs
harness/: harness.py  resource_manager.py
harness/plugins/: base.py  subprocess_adapter.py
harness/utils/: permissions.py
implementations/git/: implementation.py
implementations/git-cmd/: implementation.py
implementations/pygit2/: implementation.py
implementations/python/: implementation.py
implementations/ruby/: implementation.py
implementations/rust/: implementation.py
results/: results_20250809_174555.txt
runners/: python_runner.py
scripts/: linux_performance_test.py  performance_test.py  view_results.py
src/: content.rs  directory.rs  error.rs  git_objects.rs  hash.rs  lib.rs  main.rs  person.rs  release.rs  revision.rs  snapshot.rs  swhid.rs  timestamp.rs
swh-model/docs/: Makefile.sphinx
swh-model/swh.model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test_harness/: README.md  config.yaml  harness.py  performance_test.py
test_harness/payloads/content/: unicode.txt
test_harness/payloads/directory/simple/: file1.txt  file2.txt
test_harness/results/: results_20250806_201606.json  results_20250806_201619.json  results_20250806_204435.json  results_20250806_205507.json  results_20250806_205557.json  results_20250806_210312.json  results_20250809_174618.txt  results_20250809_175322.txt  results_20250809_180022.txt  results_20250809_180055.txt  results_20250809_180421.txt  results_20250809_180455.txt  results_20250825_162711.txt  results_20250825_163038.txt  results_20250825_163049.txt  results_20250825_191822.json  results_20250825_191826.json  results_20250825_191834.json  results_20250825_191854.json  results_20250825_191926.json  results_20250825_191941.json  results_20250825_191945.json  results_20250825_191953.json  results_20250825_191958.json
test_harness/runners/: git_cmd_runner.py  pygit2_runner.py  python_runner.py  rust_bin_runner.py  rust_lib_runner.py  rust_runner.py
tests/: core_tests.rs  hash_computation_tests.rs
tests/unit/: test_harness.py  test_view_results_variants.py
tools/: merge_results.py
tools/dashboard/: generator.py
tools/dashboard/assets/css/: dashboard.css
tools/dashboard/templates/: index.html
(+2 files in other folders)
