[package]
name = "swhid"
version = "0.1.0"
edition = "2021"
description = "Software Heritage Identifier (SWHID) computation library"
license = "MIT"
repository = "https://github.com/your-username/swhid-rs"
keywords = ["swhid", "software-heritage", "hash", "identifier"]
categories = ["data-structures", "encoding"]

[dependencies]
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "swhid-cli"
path = "src/main.rs"

[lib]
name = "swhid"
path = "src/lib.rs" 